--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
 	<div id="container">
 	
-		<div id="logo"> <h1>FROMUŁA 1</h1>
+		<div id="logo"> <h1>FORMUŁA 1</h1>
 		</div>
 		
 		<div id="nav">
@@ -84,7 +84,7 @@
 		 <img src="reklama2.jpg" width="160" height="600">
 		</div>
 		
-		<div id="footer">Niech nikt niie mówi, że Formuła 1 jest nudna !
+		<div id="footer">Niech nikt nie mówi, że Formuła 1 jest nudna !
 		</div>
 	
 	
