--- a/ferrari.html
+++ b/ferrari.html
@@ -69,6 +69,11 @@
 		
 		<div id="nav">
 			
+			Najlepsze zespoły:<br/>
+			<a href="mercedes.html">Mercedes</a><br/>
+			<a href="redbull.html">Red Bull</a><br/>
+			<a href="ferrari.html">Ferrari</a>
+	
 		</div>
 	
 		<div id="content"> 
