--- a/mercedes.html
+++ b/mercedes.html
@@ -68,7 +68,10 @@
 		</div>
 		
 		<div id="nav">
-			
+			Najlepsze zespoły:<br/>
+			<a href="mercedes.html">Mercedes</a><br/>
+			<a href="redbull.html">Red Bull</a><br/>
+			<a href="ferrari.html">Ferrari</a>
 		</div>
 	
 		<div id="content"> 
